chore: improves validation and uses JSR-380 (bean validation) for all web controller